--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "daisyui": "^2.51.3",
     "firebase": "^9.19.1",
     "flowbite": "^1.6.4",
+    "flowbite-react": "^0.4.2",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
